# model-community

./: README.md
agentic_infrastructure/: README.md  harm_taxonomy.yaml
agentic_infrastructure/entity_schema/: abstract_entity_schema.yaml  discord_entity_schema.yaml  (+2 more)
classifier_probes/: t5gemma2-encoder-simple.ipynb
cope/: server.py
gpt/: client.py
gpt-oss-safeguard/: README.md
hackathon_demos/: README.md  should-we-be-concerned.py
hackathon_demos/gpt_oss_utils_dactile/: .gitignore  README.md  pyproject.toml
hackathon_demos/gpt_oss_utils_dactile/gpt_oss_utils_dactile/: classify.py  model_predict.py  predict_cache_manage.py
hackathon_demos/gpt_oss_utils_dactile/gpt_oss_utils_dactile/hackathon/: analyize_comparison.py  controversial-micro.jsonl
hackathon_demos/gpt_oss_utils_dactile/gpt_oss_utils_dactile/policies/: spam.md
hackathon_demos/gpt_oss_utils_dactile/gpt_oss_utils_dactile/policies/hackathon/: is_good.py  parse_likert.py
hackathon_demos/policy-agent-cli/: README.md  pyproject.toml
hackathon_demos/policy-agent-cli/policy_cli/agents/: executor.py
hackathon_demos/policy-agent-cli/policy_cli/core/: events.py  openai_client.py  types.py
hackathon_demos/policy-agent-cli/policy_cli/mcp/: __init__.py
hackathon_demos/policy-agent-cli/policy_cli/tools/: base.py  registry.py
hackathon_demos/policy-agent-cli/policy_cli/tools/builtin/: policy_tools.py  registry.py  shell_tools.py  web_tools.py
hackathon_demos/policy-agent-cli/policy_pak/data/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
hackathon_demos/policy-agent-cli/policy_pak/policy/: policy_v001.md  policy_v003.md
hackathon_demos/policy-agent-cli/policy_pak/runs/: run_policy_v001_20251207_195813_results.json  run_policy_v002_20251207_204202_results.json
hackathon_demos/reasoning-clustering-experiment/: .gitignore  clustering_analysis.py  pyproject.toml
hackathon_demos/reasoning-clustering-experiment/src/: __init__.py  config.py  embeddings.py
projects/: README.md
resources/: README.md  RMC Guide to Using Open Safety Models.md
(+60 files in other folders)
