[tool.poetry]
name = "policy-agent-cli"
version = "0.1.0"
description = "Policy Agent CLI - Agentic Policy Optimization for GPT-OSS-Safeguard"
authors = ["marshallho <marshall.h.ho@gmail.com>"]
readme = "README.md"
packages = [{include = "policy_cli"}]

[tool.poetry.dependencies]
python = ">=3.11"
groq = ">=0.4.0"
python-dotenv = ">=1.0.0"
datasets = ">=2.14.0"
click = ">=8.1.0"
rich = ">=13.0.0"
pydantic = ">=2.0.0"
aiohttp = ">=3.8.0"
openai = ">=1.0.0"
httpx = ">=0.24.0"
jsonschema = ">=4.17.0"

[tool.poetry.scripts]
policy = "policy_cli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
