[project]
name = "reasoning-clustering-experiment"
version = "0.1.0"
description = "Analyze how LLM reasoning traces affect content clustering for toxicity detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "datasets>=4.4.1",
]

[project.optional-dependencies]
data = [
    "datasets>=2.14.0",  # For downloading Civil Comments from HuggingFace
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
